main/src/main/java/com/example/main/exception/errors/NotFoundException.java
package com.example.main.exception.errors;

public class NotFoundException extends RuntimeException {
    public NotFoundException(String message) {
        super(message);
    }
}